[package]
name = "memo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
error-stack = "0.4.1"
jlogger-tracing = "0.1.4"
regex = "1.9.6"

[profile.release]
opt-level = "z"
lto = true
strip="debuginfo"
