[package]
name = "jmemo"
description = "A simple CUI tool for maintaining memos"
version = "0.1.0"
authors = ["Seimizu Joukan <joukan.seimizu@gmail.com>"]
repository = "https://github.com/saimizi/memo"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "memo"
path = "src/main.rs"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive", "cargo", "help"] }
error-stack = "0.4.1"
jlogger-tracing = "0.1.4"
regex = "1.9.6"

[profile.release]
opt-level = "z"
lto = true
strip = "debuginfo"
